ConfigMaps-ENV-Variables.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: command-demo
  labels:
    purpose: command
spec:
  containers:
  - name: command-demo-container
    image: ubuntu
    command: ["apt" "update"]



---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-prod
  labels:
    app: myapp
    type: prod
spec:
  containers:
    - name: nginx-container
      image: nginx
