ConfigMaps.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-prod
  labels:
    app: myapp
    type: prod
spec:
  containers:
    - name: nginx-container
      image: nginx
You can use ConfigMap-defined environment variables in the command and args of a container using the $(VAR_NAME) Kubernetes substitution syntax.

---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-prod
  labels:
    app: myapp
    type: prod
spec:
  containers:
    - name: nginx-container
      image: nginx
      command: [ "/bin/echo", "$(COMMAND1)", "$(ARGUMENTS1)" ]
