DaemonSet.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
    name: elasticsearch
    namespace: kube-system
    labels:
        env: prod-logging
spec:
    selector:
        matchLabels:
          name: elasticsearch
    template:
        metadata:
            labels:
                name: elasticsearch

        spec:
            toleration:
                affinity:
                    nodeAffinity:
                        requiredDuringSchedulingIgnoredDuringExecution:
                            nodeSelectorTerms:
                               - matchExpressions:
                                    - key: kubernetes.io/hostname
                                      operator: In
                                      values:
                                        - controlplane
            containers:
                - name: elasticsearch
                  image: registry.k8s.io/fluentd-elasticsearch:1.20
                  resources:
                    cpu: 1
                    memory: 1Gi
                  limit:
                    cpu: 2
                    memory: 2Gi
