Private-Registry-Pull.yml
kubectl create secret docker-registry my-docker-cred --docker-username=khwahishindoria --docker-password=Liverpool@1234 --docker-email=khwahishindoria@gmail.com --docker-server=khwahishindoria/testcode:nginx-test

---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-test
  name: nginx-test
spec:
  containers:
  - image: khwahishindoria/testcode:nginx-test
    name: nginx-test
    resources: {}
  imagePullSecrets:
  - name: my-docker-cred
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
