RollingUpdate.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-prod-deployment
    labels:
      env: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.17.2



apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-prod-deployment
    labels:
      env: prod
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.17.2
