Secrets.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-prod
  labels:
    app: mysql
    type: prod
spec:
  containers:
    - name: mysql-container
      image: mysql
      #ports:
      #  - containerPort: 3306
