Storage.yml
https://kubernetes.io/docs/tasks/configure-pod-container/configure-persistent-volume-storage/
# Volumes - mound directory from host
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
      - name: data-vol
        mountPath: /tmpdata
      - name: file-vol
        mountPath: /tmp/config.txt
    resources: {}
  volumes:
    - name: data-vol
      hostPath:
        path: /tmp/data
        type: Directory
    - name: file-vol
      hostPath:
        path: /tmp/myfile.txt
        type: FileOrCreate
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

# Persistent Volumes
---
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
    - name: myfrontend
      image: nginx
      volumeMounts:
      - mountPath: "/tmp"
        name: my-vol
  volumes:
    - name: my-vol
      persistentVolumeClaim:
        claimName: myclaim


######  KodeKloud Exercises
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      volumeMounts:
      - mountPath: "/var/www/html"
        name: my-vol
  volumes:
    - name: my-vol
      persistentVolumeClaim:
        claimName: local-pvc

# storage class
