nodeSelector.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: beas
  name: beas
spec:
  containers:
  - image: nginx
    name: beas
    resources: {}
  nodeSelector:
    kubernetes.io/hostname: controlplane
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
