pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-tomcat
  labels:
    app: myapp-tomcat
    type: front-end
spec:
  containers:
    - name: tomcat-container
      image: tomcat
      ports:
        - containerPort: 8080
