taint_toleration.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: bee
  name: bee
spec:
  containers:
  - image: nginx
    name: bee
    resources: {}
  tolerations:
    - key: "env"
      operator: "Exists"
      #value: "mortein"
      effect: "PreferNoSchedule"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
